--- a/studybud/requirements.txt
+++ b/studybud/requirements.txt
@@ -1,8 +1,14 @@
-
-Django==5.0.4
-django-cors-headers==3.13.0
-djangorestframework==3.14.0
-gunicorn==20.1.0
-psycopg2==2.9.3
-pytz==2023.3
-sqlparse==0.4.4
+Brotli==1.1.0
+click==8.1.7
+gunicorn==22.0.0
+psycopg2-binary==2.9.9
+uvicorn==0.29.0
+whitenoise==6.6.0
+Django>=5.0.4
+djangorestframework>=3.14.0
+gunicorn>=20.1.0
+django-cors-headers>=3.13.0
+psycopg2>=2.9.3
+Pillow>=9.0.1
+django-environ>=0.8.1
+dj_database_url
